# discontinuous_galerkin

./: .gitignore  .travis.yml  Cargo.toml  README.MD
scripts/: dirichlet_constraint.py  dirichlet_weakly_bilinear.py  flux_artificial.py  flux_matrix.py  flux_natural.py  mass_matrix.py  neumann_constraint.py  penalty_sigma.py
scripts/integrands/: coordinates_mapping.py  dirichlet_natural_linear.py  neumann_constraint.py
src/: lib.rs
src/common/: edge.rs  field.rs  interfaces.rs  point.rs
src/triangle/: boundary_constraint.rs  element.rs
src/triangle/integrands/: dirichlet_constraint.rs  flux_artificial.rs  flux_natural.rs  interface_penalty.rs  mass.rs  neumann_constraint.rs  penalty_zero.rs  utils.rs
src/triangle/system_builder/: assembler_utils.rs  builder.rs  domain.rs  heat_transfer_problem.rs
src/triangle/system_builder/internal/: flux_artificial.rs  flux_natural.rs  jump_penalty.rs  mass.rs
